crates/k-rust/tests/snapshots/definition_regex__actual_newline_character.snap
---
source: crates/k-rust/tests/definition_regex.rs
description: "K regex:\n\na\nb"
---
Regex {
    start_line: false,
    body: Concat(
        [
            Char(
                'a',
            ),
            Char(
                '\n',
            ),
            Char(
                'b',
            ),
        ],
    ),
    end_line: false,
}
