crates/k-rust/tests/snapshots/definition_regex__anchors_precedence_and_repetition.snap
---
source: crates/k-rust/tests/definition_regex.rs
description: "K regex:\n\n^({Digit}|[a-f])+x{2,4}$"
---
Regex {
    start_line: true,
    body: Concat(
        [
            OneOrMore(
                Union {
                    left: Named(
                        "Digit",
                    ),
                    right: CharClass {
                        negated: false,
                        members: [
                            Range {
                                start: 'a',
                                end: 'f',
                            },
                        ],
                    },
                },
            ),
            Range {
                body: Char(
                    'x',
                ),
                at_least: 2,
                at_most: 4,
            },
        ],
    ),
    end_line: true,
}
