crates/k-rust/tests/snapshots/definition_regex__classes_escapes_and_unicode.snap
---
source: crates/k-rust/tests/definition_regex.rs
description: "K regex:\n\n[^\\n\\-🙂]"
---
Regex {
    start_line: false,
    body: CharClass {
        negated: true,
        members: [
            Char(
                '\n',
            ),
            Char(
                '-',
            ),
            Char(
                '🙂',
            ),
        ],
    },
    end_line: false,
}
