crates/k-rust/tests/snapshots/definition_regex__empty_character_class_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
expression: "regex :: parse(\"[]\").unwrap_err()"
---
ParseError {
    index: 2,
    message: "Character class cannot be empty.",
    input: "[]",
}
