crates/k-rust/tests/snapshots/definition_regex__empty_regex_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
expression: "regex :: parse(\"\").unwrap_err()"
---
ParseError {
    index: 0,
    message: "Cannot be empty.",
    input: "",
}
