crates/k-rust/tests/snapshots/definition_regex__invalid_identifier_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
expression: "regex :: parse(\"{lowercase}\").unwrap_err()"
---
ParseError {
    index: 10,
    message: "Lexical identifier {lowercase} is invalid. Identifiers should match the regular expression \"#?[A-Z][a-zA-Z0-9]*\".",
    input: "{lowercase}",
}
