crates/k-rust/tests/snapshots/definition_regex__nested_concatenation.snap
---
source: crates/k-rust/tests/definition_regex.rs
expression: "regex :: parse(\"({Upper}{Lower})+|x(yz)?\").unwrap()"
---
Regex {
    start_line: false,
    body: Union {
        left: OneOrMore(
            Concat(
                [
                    Named(
                        "Upper",
                    ),
                    Named(
                        "Lower",
                    ),
                ],
            ),
        ),
        right: Concat(
            [
                Char(
                    'x',
                ),
                ZeroOrOne(
                    Concat(
                        [
                            Char(
                                'y',
                            ),
                            Char(
                                'z',
                            ),
                        ],
                    ),
                ),
            ],
        ),
    },
    end_line: false,
}
