crates/k-rust/tests/snapshots/definition_regex__oversized_repetition_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
description: "Invalid K regex:\n\na{999999999999}"
---
ParseError {
    index: 2,
    message: "Repetition count is too large.",
    input: "a{999999999999}",
}
