crates/k-rust/tests/snapshots/definition_regex__unescaped_anchor_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
expression: "regex :: parse(\"a$b\").unwrap_err()"
---
ParseError {
    index: 1,
    message: "Unexpected token '$'. Did you mean '\\$'?",
    input: "a$b",
}
