crates/k-rust/tests/snapshots/definition_regex__unmatched_close_group_error.snap
---
source: crates/k-rust/tests/definition_regex.rs
description: "Invalid K regex:\n\na)"
---
ParseError {
    index: 1,
    message: "Unexpected token ')'. Did you mean '\\)'?",
    input: "a)",
}
